tests/errors/unmapped_pin.nm

component A {
    prefix = "U";
    footprint = "a";

    pin X: input = 1;
    pin Y: input = 2;
}

abstract component B {
    net H;

    pin G: input;

    A {
        X: H;
        Y: G;
    }

    A {
        X: G;
        Y: H;
    }
}

abstract component Main {
    B {
    }
}